v2_using_values_file/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ngnix
spec:
  selector:
    app: ngnix
  ports:
    - name: main
      protocol: tcp
      port: 80
      targetPort: 80
