v2_using_values_file/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ngnix
  annotations:
    http.port: "443"
spec:
  backend:
    serviceName: ngnix
    servicePort: 80
